--- a/games/canvas.html
+++ b/games/canvas.html
@@ -3,9 +3,13 @@
 <head>
     <!-- Scripts & CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="/src/dependencies/appearance.css">
+    <script src="/src/dependencies/functions.js"></script>
+    <script src="/src/dependencies/cookies.js"></script>
+    <script defer src="/src/dependencies/appearance.js"></script>
     <!-- Titlebar -->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/index-icon.png"/>
-    <title>Yeetserver - MP</title>
+    <title>Yeetserver</title>
     <!-- Open Graph protocol -->
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
