--- a/games/index.html
+++ b/games/index.html
@@ -18,7 +18,8 @@
     <!-- Website specific contents -->
 </head>
 <body onload="startup()">
-<a class="link" href="https://yeetserver.github.io/games/valorant">Valorant Randomizer</a>
+<a class="link" href="https://yeetserver.github.io/games/valorant">Valorant Randomizer</a><br>
+<a class="link" href="https://yeetserver.github.io/games/canvas">Canvas</a>
 </body>
 </html>
 
