--- a/bingguesser/index.html
+++ b/bingguesser/index.html
@@ -24,6 +24,8 @@
 <body>
 <key id="key" style="display: none;"></key>
 
+<p style="position: absolute; left: 0.5vw; top: 96vh; font-size: small;">1.0</p>
+
 <div class="text-class">
     <h1>BINGGUESSER</h1>
     <p>Erstelle ein neues Spiel oder trete einem bereits bestehendem Spiel bei.</p>
@@ -34,8 +36,10 @@
         <p3>Erstelle ein neues Spiel</p3>
         <button class="collapsible">Einstellungen</button>
         <div class="content">
-            <p2 id="slider-text">6 Runden</p2>
-            <input type="range" min="1" max="12" value="6" class="slider" id="maxRounds" onmousemove="sliderUpdate()">
+            <p2 id="max-rounds-slider-text">6 Runden</p2>
+            <input type="range" min="1" max="12" value="6" class="slider" id="max-rounds-slider" onmousemove="maxRoundsSliderUpdate()">
+            <p2 id="time-slider-text">30 Sekunden</p2>
+            <input type="range" min="10" max="90" value="30" class="slider" id="time-slider" onmousemove="timeSliderUpdate()">
             <br><p2>Schwierigkeit</p2>
             <select id="difficulty" class="menu">
                 <option value="0">Einfach</option>
@@ -66,14 +70,21 @@ for (var i = 0; i < coll.length; i++) {
       content.style.display = "block";
     }
   });
-}
-
-const slider = document.getElementById('maxRounds');
-const sliderText = document.getElementById('slider-text');
-
-function sliderUpdate () {
-    sliderText.textContent = `${slider.value} Runden`;
 };
+
+const maxRoundsSlider = document.getElementById('max-rounds-slider');
+const maxRoundsSliderText = document.getElementById('max-rounds-slider-text');
+const timeSlider = document.getElementById('time-slider');
+const timeSliderText = document.getElementById('time-slider-text');
+
+
+function maxRoundsSliderUpdate () {
+    maxRoundsSliderText.textContent = `${maxRoundsSlider.value} Runden`;
+};
+function timeSliderUpdate () {
+    timeSliderText.textContent = `${timeSlider.value} Sekunden`;
+};
+
 </script>
 
 <script>
