--- a/bingguesser/game.html
+++ b/bingguesser/game.html
@@ -37,8 +37,8 @@
 </div>
 
 <div id="round-timer-display">
+    <p id="timer-display">Verbleibende Zeit: 0:00</p>
     <p id="round-counter">Runde 0/0</p>
-    <p id="timer-display">Zeit: 0:00</p>
 </div>
 
 <div class="menu-div" id="menu-div">
