--- a/bingguesser/index.html
+++ b/bingguesser/index.html
@@ -24,7 +24,7 @@
 <body>
 <key id="key" style="display: none;"></key>
 
-<p style="position: absolute; left: 0.5vw; top: 96vh; font-size: small;">1.0</p>
+<p style="position: absolute; left: 0.5vw; top: 96vh; font-size: small;">1.1</p>
 
 <div class="text-class">
     <h1>BINGGUESSER</h1>
@@ -38,9 +38,9 @@
         <div class="content">
             <p2 id="max-rounds-slider-text">6 Runden</p2>
             <input type="range" min="1" max="12" value="6" class="slider" id="max-rounds-slider" onmousemove="maxRoundsSliderUpdate()">
-            <p2 id="time-slider-text">30 Sekunden</p2>
-            <input type="range" min="10" max="90" value="30" class="slider" id="time-slider" onmousemove="timeSliderUpdate()">
-            <br><p2>Schwierigkeit</p2>
+            <p2 id="time-slider-text">45 Sekunden</p2>
+            <input type="range" min="15" max="120" value="45" class="slider" id="time-slider" onmousemove="timeSliderUpdate()">
+            <p2>Schwierigkeit</p2>
             <select id="difficulty" class="menu">
                 <option value="0">Einfach</option>
                 <option value="1">Normal</option>
