--- a/404.html
+++ b/404.html
@@ -21,12 +21,10 @@
 </head>
 <body onload="startup()">
 
-
 <div class="item">
-    <img src="/images/404-error.png" alt="404-error" style="width: 75%;" id="image"/>
+    <img src="/assets/images/404-error.png" alt="404-error" style="width: 75%;" id="image"/>
     <p style="font-size: 150%;" id="text"></p>
 </div>
-
 
 <style>
 .item{
