--- a/bingguesser/game.html
+++ b/bingguesser/game.html
@@ -44,7 +44,7 @@
 <div class="menu-div" id="menu-div">
     <button id="toggle-map">Karte Anzeigen</button>
     <button id="guess-button">Fertig 🗺</button>
-    <button id="center-button" style="text-decoration: line-through;">Zurück ♻</button>
+    <button id="center-button">Zurück ♻</button>
     <div id="h-access"></div>
 </div>
 
