--- a/bingguesser/index.html
+++ b/bingguesser/index.html
@@ -3,10 +3,10 @@
 <head>
     <!-- Scripts & CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="/src/dependencies/appearance.css">
-    <script src="/src/dependencies/functions.js"></script>
-    <script src="/src/dependencies/cookies.js"></script>
-    <script defer src="/src/dependencies/appearance.js"></script>
+    <link rel="stylesheet" href="/dependencies/appearance.css">
+    <script src="/dependencies/functions.js"></script>
+    <script src="/dependencies/cookies.js"></script>
+    <script defer src="/dependencies/appearance.css"></script>
     <!-- Titlebar -->
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/3192/3192970.png"/>
     <title>BINGGUESSER</title>
@@ -16,15 +16,13 @@
     <meta property="og:description" content="Trete einem Spiel bei oder erstelle ein neues"/>
     <meta property="og:image" content="https://yeetserver.github.io/assets/images/index-icon.png"/>
     <!-- Website specific contents -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
-    <script type="module" src="/src/dependencies/login-required.js"></script>
     <script defer src="/bingguesser/src/index.js" type="module"></script>
     <link rel="stylesheet" href="/bingguesser/src/index.css">
 </head>
 <body>
 <key id="key" style="display: none;"></key>
 
-<p style="position: absolute; left: 0.5vw; top: 96vh; font-size: small;">1.3</p>
+<p style="position: absolute; left: 0.5vw; top: 96vh; font-size: small;">Version 1.4 (Beta)</p>
 
 <div class="text-class">
     <h1>BINGGUESSER</h1>
@@ -46,16 +44,49 @@
     <div class="join-class">
         <h2>Spiel Beitreten</h2>
         <p3>Trete einem Spiel bei</p3>
-        <input type="text" id="id" placeholder="Spiel ID">
+        <input type="text" id="username" placeholder="Benutzername">
+        <input type="text" id="gameid" placeholder="Spiel ID">
         <button id="join-button">Spiel beitreten</button>
     </div>
 </div>
 
-<script defer>
-var coll = document.getElementsByClassName("collapsible");
+<script>
+var usernameInput = document.getElementById("username")
+var username = getCookie("username")
 
-for (var i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
+function generateUsername() {
+    username = [ 'Lion', 'Tiger', 'Bear',
+    'Deer', 'Wolf', 'Fox', 'Coyote', 'Owl',
+    'Hawk', 'Eagle', 'Falcon', 'Penguin', 'Seal',
+    'Whale', 'Shark', 'Snake', 'Crocodile',
+    'Alligator', 'Turtle' ][Math.floor(Math.random() * 19)];
+    setCookie("username", username)
+    usernameInput.value = username
+    setCookie("username", String(usernameInput.value), 100)
+}
+
+if (username == "" || username == undefined) {
+    generateUsername()
+} else {usernameInput.value = username}
+
+
+usernameInput.addEventListener("change", () => {
+    
+    setCookie("username", username)
+});
+
+var gameidInput = document.getElementById("id")
+var gameidURL = window.location.search ? window.location.search.replace("?gameid=", "") : null 
+
+if (gameidInput != null) {
+    gameidInput.value = gameidURL
+}
+</script>
+<script defer>
+var collaps = document.getElementsByClassName("collapsible");
+
+for (var i = 0; i < collaps.length; i++) {
+    collaps[i].addEventListener("click", function() {
     this.classList.toggle("active");
     var content = this.nextElementSibling;
     if (content.style.display === "block") {
@@ -78,27 +109,5 @@ function maxRoundsSliderUpdate () {
 function timeSliderUpdate () {
     timeSliderText.textContent = `${timeSlider.value} Sekunden`;
 };
-
 </script>
-
-<script>
-if (window.location.search != "") {
-    function deferAlert() {
-        let message = window.location.search.replace("?", "").replace(/!/g, " ")
-        alert(message)
-    }
-    window.onload = deferAlert
-}
-</script>
-
-<script>
-const acskey = getCookie("acskey")
-const acskeySpl = acskey.split("?")
-
-const acskeyDcr = CryptoJS.AES.decrypt(acskeySpl[1], acskeySpl[0]);
-const acskeyDcrStr = acskeyDcr.toString(CryptoJS.enc.Utf8);
-
-document.getElementById("key").innerHTML = acskeyDcrStr
-</script>
-
 </html>
